--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>turn</p>
         </div>
         <div>
-            <button class="restart" id="restartButton"><img src="/img/rotate-right-solid.svg"></button>
+            <button class="restart" id="restartButton"><img src="./img/rotate-right-solid.svg"></button>
         </div>
     </div>
     <div class="board" id="board">     
